[package]
name = "daemonize"
version = "0.1.2"
license = "MIT/Apache-2.0"
authors = ["Fedor Gogolev <knsd@knsd.net>"]
repository = "https://github.com/knsd/daemonize"
documentation = "http://knsd.github.io/daemonize"
readme = "README.md"
description = "Library to enable your code run as a daemon process on Unix-like systems."
keywords = ["daemon", "daemonize", "unix"]

[dependencies]
libc = "0.2.4"
quick-error = "0.1.4"

[dev-dependencies]
log = "0.3.4"
syslog = "3.1.0"
tempdir = "0.3.4"
