[package]
name = "daemonize"
version = "0.3.0"
license = "MIT/Apache-2.0"
authors = ["Fedor Gogolev <knsd@knsd.net>"]
repository = "https://github.com/knsd/daemonize"
documentation = "http://knsd.github.io/daemonize"
readme = "README.md"
description = "Library to enable your code run as a daemon process on Unix-like systems."
keywords = ["daemon", "daemonize", "unix"]

[dependencies]
libc = "0.2.4"
clippy = {version = "0.0", optional = true}

[dev-dependencies]
tempdir = "0.3.4"

[features]
default=[]
